--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00056.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00056.md
@@ -2,16 +2,16 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/Fkl8P0s-nvKW76cGmFsnTCqaPfZWFi1_9mGhLRAsKfA=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACcyZqAhUz26tk1uglrby0Ha/luontokuvat/kes%C3%A4/2/DSC35926-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/L4dKSrwa682QwLoxHvj72ye0vF_yJQkRjW30dPuY3R4=w800)](https://lh3.googleusercontent.com/L4dKSrwa682QwLoxHvj72ye0vF_yJQkRjW30dPuY3R4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACzKzgpmQ2zjV5M5qQl9YuHa/luontokuvat/kes%C3%A4/2/DSC35819-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAb4ct0KBCgCSIIjw09bv2Ia/luontokuvat/kes%C3%A4/2/DSC35819.jpg)
 
-[![](https://lh3.googleusercontent.com/Z11Epeijs9KgBrcvJUDP5CYfmJO8LQ2-ClOB-pAoYSU=w800)](https://lh3.googleusercontent.com/Z11Epeijs9KgBrcvJUDP5CYfmJO8LQ2-ClOB-pAoYSU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADYOS1oxXABcthxcAvloSLKa/luontokuvat/kes%C3%A4/2/DSC35828-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADcj4VEfcR50H-XHfkfyYbaa/luontokuvat/kes%C3%A4/2/DSC35828.jpg)
 
-[![](https://lh3.googleusercontent.com/tfTcuZHLuC0Wu_Y6LvWfb8hmoehjzJ_kdBY9wPFTSuI=w800)](https://lh3.googleusercontent.com/tfTcuZHLuC0Wu_Y6LvWfb8hmoehjzJ_kdBY9wPFTSuI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB_zMQumIge493wAm4kK4j-a/luontokuvat/kes%C3%A4/2/DSC35881-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABnVJoSbgIfIEGdoH1pqANha/luontokuvat/kes%C3%A4/2/DSC35881.jpg)
 
-[![](https://lh3.googleusercontent.com/mCNl8JMdj3ynXa-oQkzQk-2wpzmfrqBEJeZlQl_Iqk4=w800)](https://lh3.googleusercontent.com/mCNl8JMdj3ynXa-oQkzQk-2wpzmfrqBEJeZlQl_Iqk4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC_fhsEDn1dYuvYyobYd8qVa/luontokuvat/kes%C3%A4/2/DSC35926-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAU4c-V0ehYxsYYjfZWtKCra/luontokuvat/kes%C3%A4/2/DSC35926.jpg)
 
-[![](https://lh3.googleusercontent.com/rjv0h8I9Chl0GYBDxwng0IuZOZchirJOy4xB2fC8h94=w800)](https://lh3.googleusercontent.com/rjv0h8I9Chl0GYBDxwng0IuZOZchirJOy4xB2fC8h94=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAlTCUImneAOEm6Tc8sD_4Ha/luontokuvat/kes%C3%A4/2/DSC35964-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACim_0ih9SLYE7jQKqiQA-Ja/luontokuvat/kes%C3%A4/2/DSC35964.jpg)
